🐛 fix(base-layout): fixed scroll overflow to only be for main content

--- a/frontend/src/components/BaseLayout/BaseLayout.module.css
+++ b/frontend/src/components/BaseLayout/BaseLayout.module.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 .layoutWrapper {
@@ -14,12 +15,11 @@ body {
 }
 
 .mainContentWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: 70vh;
+  margin: 0rem 2rem;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .headerContentWrapper {
@@ -35,15 +35,6 @@ body {
   flex-direction: row;
   align-items: center;
   flex-grow: 1;
-}
-
-.mainContent {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  width: 93%;
 }
 
 .horizontalWrapper {
